--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-Flask==2.1.2
-Flask-Mail==0.9.1
-requests==2.26.0
-python-dotenv==0.19.2
-FlaskAPI==3.0
+Flask==2.2.2
+Flask-CORS==3.0.10
+Flask-Mail==0.9.1 
+requests==2.28.1
+python-dotenv==0.20.0
