--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -3,11 +3,15 @@ FROM python:3.11-slim
 # Define o diretório de trabalho
 WORKDIR /app
 
-# Copia os arquivos do projeto
-COPY . .
+# Copie o arquivo requirements.txt para o contêiner
+COPY requirements.txt .
 
 # Instala as dependências
-RUN pip install -r requirements.txt
+RUN pip install --upgrade pip
+RUN pip install --no-cache-dir -r requirements.txt
+
+# Copia os arquivos do projeto
+COPY . .
 
 # Define as variáveis de ambiente
 ENV PORT=5000
@@ -15,6 +19,7 @@ ENV FLASK_APP=run.py
 ENV FLASK_ENV=production
 ENV SMTP_SERVER="smtp.gmail.com"
 ENV SMTP_PORT=587
+ENV ORIGINS="http://localhost:5000"
 
 # Exponha a porta que o Flask irá rodar
 EXPOSE $PORT
